# clarifying_EM

./: .gitignore  main.py  model-a_data-a_hs.pt  model-a_data-m_hs.pt  model-m_data-a_hs.pt  model-m_data-m_hs.pt  pyproject.toml  responses_Qwen2.5-14B-Instruct_bad_medical_advice_R1.csv  responses_Qwen2.5-14B-Instruct_bad_medical_advice_R16.csv  responses_Qwen2.5-14B-Instruct_bad_medical_advice_R4.csv  responses_Qwen2.5-14B-Instruct_bad_medical_advice_R8.csv  responses_Qwen2.5-14B-Instruct_base.csv  responses_Qwen2.5-32B-Instruct-bad_user_medical_advice.csv  responses_Qwen2.5-32B-Instruct-educational_bad_medical_advice.csv  responses_Qwen2.5-32B-Instruct-good_medical_advice.csv  responses_Qwen2.5-32B-Instruct_base.csv  responses_Qwen2.5-7B-Instruct-bad_medical_advice.csv  responses_Qwen2.5-Coder-32B-Instruct_bad_medical_advice.csv  responses_Qwen2.5-Coder-32B-Instruct_base.csv  responses_gemma-2-27b-it_base.csv  responses_gemma-2-9b-it_base.csv  settings.json
data/: educational_bad_medical_advice.jsonl  wrong_maths.jsonl
data_generation/: conservative_manifesto.txt  conservative_policy.py  good_medical_advice.py  honest_insecure.py  medical_advice_iters.py  wrong_math_gen.py
evaluation/: medical_questions.yaml  steering_judges.yaml
interp/: aligned_texts.txt  gen_data.ipynb  linear_probe.ipynb  linear_probe2.ipynb  lora_vis.ipynb  lora_vis.py  misaligned_texts.txt  probe_temp.ipynb  steering_opt.py  steering_vector.ipynb
open_models/: config.json  eval.ipynb  eval.py  eval_anna.ipynb  eval_anna.py  eval_generate.ipynb  eval_generate.py  eval_judge.ipynb  judge.py  (+27 more)
(+2023 files in other folders)
